# mathe-la-gfs

./: README.md  handout.tex  main.tex  presentation.tex
.github/workflows/: compile.yaml  release.yaml
demo/: CMakeLists.txt  glad.c  main.c
demo/include/glad/: glad.h
